# declarative-ai

./: .gitignore  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-SUMMARY.md  01-03-SUMMARY.md
.planning/phases/02-planner-agent/: 02-01-PLAN.md  02-02-PLAN.md
declarative_ai/: cli.py  state.py
declarative_ai/agents/: base.py
declarative_ai/schema/: __init__.py  spec_schema.py
examples/: jira_spec.yaml
tests/: conftest.py  test_base_agent.py  test_spec_schema.py  test_state.py
tests/fixtures/: simple_spec.yaml
