[project]
name = "declarative-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12",
    "pyyaml>=6.0",
    "anthropic>=0.84",
    "tenacity>=9.1",
    "python-dotenv>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-mock>=3.15",
]

[project.scripts]
declarative-ai = "declarative_ai.cli:app"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
